<resources>
    <string name="app_name">Team60Application</string>

    <!-- Strings related to login -->
    <string name="title_activity_google_maps">Map</string>
    <string name="back">Back</string>
    <string name="userPass">Please Enter Your Username and Password</string>
    <string name="reportType">Select Type of Report</string>
    <string name="histGraph">Create History Graph</string>
    <string name="Uprofile">User Profile:</string>
    <string name="QRL">Quality Report List</string>
    <string name="submit">Submit a report:</string>
    <string name="RegInf">Enter Registration Info:</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="uName">Username:</string>
    <string name="year">Year:</string>
    <string name="RepTitle">Title of Report</string>
    <string name="WelImage">Welcome Screen Image</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="submitRep">Submit Report</string>
    <string name="pass">Password</string>
    <string name="password">Password:</string>
    <string name="enterRepName">Enter report name</string>
    <string name="emailAddress">Email Address:</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="location">Location</string>
    <string name="loc">Location:</string>
    <string name="homeAddress">Home Address:</string>
    <string name="account">Account:</string>
    <string name="cancel">Cancel</string>
    <string name="enterLat">Enter Latitude</string>
    <string name="map">Water Map</string>
    <string name="accType">Account Type</string>
    <string name="enterLong">Enter Longitude</string>
    <string name="lat">Latitude</string>
    <string name="trends">View Trends</string>
    <string name="waterCond">Condition of Water</string>
    <string name="waterType">Type of Water</string>
    <string name="repList">Reports List</string>
    <string name="longitude">Longitude</string>
    <string name="virus">Virus PPM</string>
    <string name="enterVirus">Enter Virus PPM</string>
    <string name="createRep">Create Report</string>
    <string name="createGraph">Create Graph</string>
    <string name="dataType">Date Type:</string>
    <string name="contaminant">Contaminant PPM</string>
    <string name="enterContaminant">Enter Contaminant PPM</string>
    <string name="email">Email Address:</string>
</resources>
