<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.03"
        android:background="@drawable/wave" />

    <TextView
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_weight="0.03"
         />

    <TextView
        android:text="@string/RepTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/enterRepName"
        android:ems="10"
        android:id="@+id/report_title_textEdit"
        android:layout_weight="0.03"
        android:selectAllOnFocus="true" />

    <TextView
        android:text="@string/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="47dp">

        <EditText
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:text="@string/enterLat"
            android:ems="10"
            android:id="@+id/latitude_text"
            android:layout_weight="1"
            android:inputType="numberSigned|numberDecimal"
            android:selectAllOnFocus="true" />

        <EditText
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:text="@string/enterLong"
            android:ems="10"
            android:id="@+id/longitude_text"
            android:layout_weight="1"
            android:inputType="numberSigned|numberDecimal"
            android:selectAllOnFocus="true" />
    </LinearLayout>

    <TextView
        android:text="@string/waterType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/type_water_spinner"
        android:layout_weight="0.03" />

    <TextView
        android:text="@string/waterCond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/water_condition_spinner"
        android:layout_weight="0.03" />

    <Button
        android:id="@+id/create_report_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="0.03"
        android:background="@color/cast_intro_overlay_button_background_color"
        android:text="@string/createRep" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:background="@color/cast_intro_overlay_button_background_color"
        android:text="@string/back" />

</LinearLayout>