<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/userPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
         />

    <TextView
        android:text="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username_text" />

    <TextView
        android:text="@string/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2" />

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        />

    <Button
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_Cancel" />

    <Button
        android:id="@+id/forgot_password"
        android:layout_width="412dp"
        android:layout_height="28dp"
        android:layout_weight="0.03"
        android:background="@color/cast_expanded_controller_ad_container_white_stripe_color"
        android:text="Forgot your password?"
        android:textColor="?android:attr/colorEdgeEffect" />

</LinearLayout>