<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="@string/histGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        />

    <TextView
        android:text="@string/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/year_editText"
        android:backgroundTint="@android:color/holo_green_light"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:text="@string/loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_weight="0.16"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <TextView
                android:text="@string/lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/lat_editText" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:inputType="numberSigned"
                android:ems="10"
                android:id="@+id/long_editText" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/dataType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        android:layout_weight="0.05" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/data_type_spinner"
        android:layout_weight="0.11" />

    <Button
        android:text="@string/createGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_graph_button"
        android:layout_weight="0.03" />

    <Button
        android:text="@string/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back_button"
        android:layout_weight="0.03" />

</LinearLayout>